--- a/Data Import.Rmd
+++ b/Data Import.Rmd
@@ -10,5 +10,25 @@ library(tidyverse)
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
+```{r csv1}
+litters_data = read_csv(file = "./data/FAS_litters.csv")
+names(litters_data)
+litters_data = janitor::clean_names(litters_data)
+names(litters_data)
+```
+
+```{r csv2}
+pups_data = read_csv(file = "./data/FAS_pups.csv")
+names(pups_data)
+pups_data = janitor::clean_names(pups_data)
+names(pups_data)
+```
+
+```{r view}
+litters_data
+tail(litters_data, 5)
+skimr::skim(litters_data)
+```
+
 
 
