--- a/Data Import.Rmd
+++ b/Data Import.Rmd
@@ -17,17 +17,15 @@ litters_data = janitor::clean_names(litters_data)
 names(litters_data)
 ```
 
-```{r csv2}
-pups_data = read_csv(file = "./data/FAS_pups.csv")
-names(pups_data)
-pups_data = janitor::clean_names(pups_data)
-names(pups_data)
-```
-
 ```{r view}
 litters_data
 tail(litters_data, 5)
 skimr::skim(litters_data)
+```
+
+```{r csv2}
+pups_data = read_csv("./data/FAS_pups.csv", col_types = "ciiiii")
+skimr::skim(pups_data)
 ```
 
 
