--- a/Data Import.Rmd
+++ b/Data Import.Rmd
@@ -28,5 +28,17 @@ pups_data = read_csv("./data/FAS_pups.csv", col_types = "ciiiii")
 skimr::skim(pups_data)
 ```
 
+```{r excel}
+library(readxl)
+mlb11_data = read_excel("data/mlb11.xlsx", n_max = 20)
+head(mlb11_data, 5)
+```
+
+```{r sas}
+library(haven)
+pulse_data = read_sas("./data/public_pulse_data.sas7bdat")
+head(pulse_data, 5)
+```
+
 
 
