--- a/Data Manipulation.Rmd
+++ b/Data Manipulation.Rmd
@@ -25,3 +25,50 @@ pups_data = read_csv("./data/FAS_pups.csv",
 pups_data = janitor::clean_names(pups_data)
 ```
 
+
+## Select variables
+
+...by listing:
+
+```{r}
+select(litters_data, group, litter_number, gd0_weight)
+select(litters_data, litter_number, gd0_weight, pups_survive)
+```
+
+...by specifying a range:
+
+```{r}
+select(litters_data, gd_of_birth:pups_survive)
+```
+
+...by saying what you want to remove:
+
+```{r}
+select(litters_data, -litter_number)
+```
+
+...can include renaming: 
+
+```{r}
+select(litters_data, group, litter_number, gest_day_0_weight = gd0_weight)
+rename(litters_data, gest_day_0_weight = gd0_weight)
+```
+
+...use select helpers:
+
+```{r}
+select(litters_data, starts_with("gd"))
+select(litters_data, litter_number, starts_with("gd"))
+
+select(litters_data, litter_number, everything())
+```
+
+Learning assessment: In the pups data, select the columns containing litter number, sex, and PD ears.
+
+```{r}
+select(pups_data, litter_number, sex, pd_ears)
+```
+
+
+
+
