--- a/Data Manipulation.Rmd
+++ b/Data Manipulation.Rmd
@@ -70,5 +70,32 @@ select(pups_data, litter_number, sex, pd_ears)
 ```
 
 
+## Filter observations
+
+Do some filtering!!
+
+```{r}
+filter(litters_data, gd0_weight < 25)
+filter(litters_data, gd0_weight >= 25)
+
+filter(litters_data, pups_born_alive == 8)
+
+filter(litters_data, !is.na(gd0_weight))
+
+filter(litters_data, group == "Low8" | group == "Low7" )
+filter(litters_data, group %in% c("Low7", "Low8"))
+
+filter(litters_data, pups_born_alive %in% 4:6)
+
+filter(litters_data, pups_born_alive %in% 4:7, !is.na(gd0_weight))
+```
+
+Learning Assessment: Filter to include only pups with sex 1 ; Filter to include only pups with PD walk less than 11 and sex 2
+
+```{r}
+filter(pups_data, sex == 1)
+
+filter(pups_data, pd_walk < 11 & sex == 2)
+```
 
 
