mutate and arrange

--- a/Data Manipulation.Rmd
+++ b/Data Manipulation.Rmd
@@ -95,7 +95,35 @@ Learning Assessment: Filter to include only pups with sex 1 ; Filter to include 
 ```{r}
 filter(pups_data, sex == 1)
 
-filter(pups_data, pd_walk < 11 & sex == 2)
+filter(pups_data, pd_walk < 11, sex == 2)
 ```
+
+## Mutate
+
+Create variables
+
+```{r}
+ mutate(litters_data,
+    wt_gain = gd18_weight - gd0_weight,
+    group = tolower(group)
+)
+
+mutate(litters_data,
+    wt_gain = gd18_weight - gd0_weight,
+    wt_gain_squared = wt_gain^2)
+```
+
+## Arrange
+
+Arrange the data...
+
+```{r}
+arrange(litters_data, gd0_weight)
+
+arrange(litters_data, desc(pups_born_alive), gd0_weight)
+```
+
+
+
 
 
