--- a/tidy_data.Rmd
+++ b/tidy_data.Rmd
@@ -28,7 +28,9 @@ pulse_tidy = pulse_data %>%
   gather(key = "visit", value = "bdi_score", bdi_score_bl:bdi_score_12m)
 ```
 
-Illustrate `seperate`:
+## separate
+
+Illustrate `separate`:
 
 ```{r}
 pulse_tidy %>% 
@@ -49,6 +51,45 @@ pulse_df =
   mutate(visit = replace(visit, visit == "bl", "00m"))
 ```
 
+
+## Revisit FAS_litters
+
+```{r}
+litters_data = read_csv("./data/FAS_litters.csv", col_types = "ccddiiii") %>% 
+  janitor::clean_names() %>% 
+  separate(group, into = c("dose", "day"), 3)
+```
+
+## Learning Assessment
+
+```{r}
+litters_la = read_csv("./data/FAS_litters.csv", col_types = "ccddiiii") %>% 
+  janitor::clean_names() %>% 
+  select(litter_number, gd0_weight, gd18_weight) %>% 
+  gather(key = "gest_day", value = "weight", gd0_weight:gd18_weight) %>% 
+  mutate(gest_day = recode(gest_day, "gd0_weight" = 0, "gd18_weight" = 18)) %>% 
+  arrange(litter_number)
+```
+
+## spread
+
+Create `analysis_result`:
+
+```{r}
+analysis_result = tibble(
+  group = c("treatment", "treatment", "placebo", "placebo"),
+  time = c("pre", "post", "pre", "post"),
+  mean = c(4, 8, 3.5, 4)
+)
+```
+
+Make it readable:
+
+```{r}
+analysis_result %>% 
+  spread(key = time, value = mean) %>% 
+  knitr::kable()
+```
 
 
 
